# whisper-test

./: .gitignore  Cargo.toml
src/: main.rs  whisper.rs
src/whisper/: mod.rs  multilingual.rs
