[package]
name = "whisper-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.5.0"
candle-core = "0.3.2"
candle-nn = "0.3.2"
candle-transformers = "0.3.1"
clap = "4.4.11"
hf-hub = "0.3.2"
rand = "0.8.5"
serde = "1.0.193"
serde_json = "1.0.108"
tokenizers = "0.15.0"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"
wav = "1.0.0"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
